--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -10,9 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.2.2
-      - uses: mlugg/setup-zig@v1
+      - uses: mlugg/setup-zig@v1.2.1
         with:
-          version: 0.13.0
+          version: 0.14.0-dev.1911+3bf89f55c
       - name: Install kcov
         run: |
           sudo apt-get install -y kcov
